[tool.poetry]
name = "sd-prompt-maker"
version = "0.1.0"
description = ""
authors = ["Sylphy0052 <yark0531@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.1.4"
numpy = "^1.26.2"
gradio = "^4.10.0"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
pyproject-flake8 = "^6.1.0"
isort = "^5.13.2"
black = "^23.12.0"
typing-extensions = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
